--- a/exhibitions.html
+++ b/exhibitions.html
@@ -4,8 +4,8 @@
 <head>
     <title>Exhibitions</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Our exhibitions. Cosmology, evolution, biology, medicine, robotics, ai, ecology.">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Our exhibitions: Cosmology, Evolution, Biology, Medicine, Robotics, AI, Ecology.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
     <main>
         <h1>Exhibitions</h1>
         <div class="exhibition__flex">
-            <section class="card large">
+            <article class="card large">
                 <h2>Cosmology</h2>
                 <div class="card-image-container medium">
                     <img src="./assets/celso-405219.jpg" alt="The moon in different phases">
@@ -56,8 +56,8 @@
                 </div>
                 <p>Follow the journey of our solar exploration: from early Arab traders, to Galileo's telescope, to the
                     latest exploration of the planets in our solar system.</p>
-            </section>
-            <section class="card large">
+            </article>
+            <article class="card large">
                 <h2>Evolution</h2>
                 <div class="card-image-container large">
                     <img src="./assets/toa-heftiba-412579.jpg" alt="A dinosaur skeleton in a big museum hall">
@@ -65,12 +65,12 @@
                 <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where do
                     we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a
                     framework for exploring and understanding our place in this world.</p>
-                <p>Discover the origins of life on this planet and how the species we know today have evolved our time.
+                <p>Discover the origins of life on this planet and how the species we know today have evolved over time.
                     You can also take some time to meet a few of the creatures who didn't survive, including our Woolly
                     Mammoth, the Dodos, and a number of dinosaurs too.</p>
-            </section>
+            </article>
         </div>
-        <section class="card x-large">
+        <article class="card x-large">
             <h2>Biology & Medicine</h2>
             <div class="card-image-container x-large-img">
                 <img src="./assets/samuel-zeller-113381.jpg" alt="A human anatomy figure">
@@ -82,13 +82,13 @@
                 medicine and take a look at some major breakthroughs including the discovery of penicillin and the first
                 heart transplant.</p>
             <div class="card-image-container x-large-img">
-                <img src="./assets/people-219985_1280.jpg" alt="A man looking into a microskope">
+                <img src="./assets/people-219985_1280.jpg" alt="A man looking into a microscope">
             </div>
             <p>Many of our great medicinal discoveries have come not only from the lab, but also from observing animals
                 in the wild. Often our fellow creatures have beat us to it.</p>
-        </section>
+        </article>
         <div class="exhibition__flex">
-            <section class="card large">
+            <article class="card large">
                 <h2>Robotics and AI</h2>
                 <div class="card-image-container large">
                     <img src="./assets/william-bout-264826.jpg" alt="Art exhibition illustrating a network">
@@ -96,8 +96,8 @@
                 <p>The information revolution is here and robotics and artificial intelligence are the science of the
                     future. From useful home applications of AI to industrial uses of robotics, the future is here. You
                     can even say hello and shake the hand of Rob the Robot.</p>
-            </section>
-            <section class="card large">
+            </article>
+            <article class="card large">
                 <h2>Ecology</h2>
                 <div class="card-image-container large">
                     <img src="./assets/open-science-735787.jpg" alt="Logo of earth with a keyhole and galaxies around.">
@@ -108,7 +108,7 @@
                 <p>In our ecology section of the museum, we unpack the dangers we currently face including global
                     warming, extinction of species, and pollution. But we also focus on the positive ways we can all
                     contribute to a brighter future.</p>
-            </section>
+            </article>
         </div>
     </main>
     <footer>
