--- a/explore.html
+++ b/explore.html
@@ -4,8 +4,8 @@
 <head>
     <title>Explore</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Explore our world. We are a place for kids, teachers and researchers.">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Explore our museum. A welcoming space for Kids, Teachers, and Researchers.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,40 +39,48 @@
             <a href="cart.html">Cart</a>
         </nav>
     </header>
+
     <main>
         <h1>Explore together</h1>
-        <h2>Kids</h2>
-        <section class="kids">
-            <section class="card large">
-                <div class="card-image-container large">
-                    <img src="./assets/billetto-editorial-334686.jpg" alt="Boy painting with VR glasses on">
+        <section>
+            <h2>Kids</h2>
+            <div class="kids">
+                <article class="card large">
+                    <div class="card-image-container large">
+                        <img src="./assets/billetto-editorial-334686.jpg" alt="Boy painting with VR glasses on">
+                    </div>
+                    <h3>Are you a young person looking to learn more about science? </h3>
+                    <h4>Come on down to our museum, there's plenty to see and do.</h4>
+                    <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and
+                        meet
+                        our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so
+                        make sure you come ready to learn and explore.</p>
+                    <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
+                </article>
+                <div class="card-vertical">
+                    <article class="card text">
+                        <h3>Young Stars club on Saturdays</h3>
+                        <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and
+                            13:00
+                            where you'll get to explore and experiment with our team of experts.</p>
+                        <a href="visit.html" class="cta-button">Visit us</a>
+                    </article>
+                    <article class="card text">
+                        <h3>Holiday clubs</h3>
+                        <p>During the school holidays we run special holiday clubs where you can join other children
+                            your
+                            age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find
+                            out
+                            more about the holiday club and how you can join, send us a message.</p>
+                        <a href="contact-us.html" class="cta-button">Contact us</a>
+                    </article>
                 </div>
-                <h3>Are you a young person looking to learn more about science? </h3>
-                <h4>Come on down to our museum, there's plenty to see and do.</h4>
-                <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet
-                    our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so
-                    make sure you come ready to learn and explore.</p>
-                <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
-            </section>
-            <div class="card-vertical">
-                <section class="card text">
-                    <h3>Young Stars club on Saturdays</h3>
-                    <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00
-                        where you'll get to explore and experiment with our team of experts.</p>
-                    <a href="visit.html" class="cta-button">Visit us</a>
-                </section>
-                <section class="card text">
-                    <h3>Holiday clubs</h3>
-                    <p>During the school holidays we run special holiday clubs where you can join other children your
-                        age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out
-                        more about the holiday club and how you can join, send us a message.</p>
-                    <a href="contact-us.html" class="cta-button">Contact us</a>
-                </section>
             </div>
         </section>
+
         <section>
             <h2>Teachers</h2>
-            <section class="card teachers">
+            <article class="card teachers">
                 <h3>Bring Learning to Life with Our School Programs</h3>
                 <p>As a community-driven museum, we want to work with schools to create places of learning and
                     exploring. Our team are on hand to give your students guided tours of the museum, teach them in our
@@ -80,11 +88,12 @@
                 <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring
                     your students through for a visit.</p>
                 <a href="contact-us.html" class="cta-button">Contact us</a>
-            </section>
+            </article>
         </section>
+
         <section>
             <h2>Researchers</h2>
-            <section class="card researchers">
+            <article class="card researchers">
                 <div class="card-image-container large">
                     <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                 </div>
@@ -96,7 +105,7 @@
                     </p>
                     <a href="contact-us.html" class="cta-button">Contact us</a>
                 </div>
-            </section>
+            </article>
         </section>
     </main>
 
