Update cart and order summary
Updated typo in order summary.
Updated the table to be the same as in cart and did some update on styling for both.

--- a/cart.html
+++ b/cart.html
@@ -82,8 +82,7 @@
                         <td>Price</td>
                         <td>$20</td>
                     </tr>
-
-                    <tr class="section-heading">
+                    <tr class="section-heading total">
                         <td>Total</td>
                         <td>$40</td>
                     </tr>
