--- a/order-summary.html
+++ b/order-summary.html
@@ -4,8 +4,8 @@
 <head>
     <title>Order summary</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Order summary">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Order summary">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,12 +43,15 @@
         <h1>Order summary</h1>
         <table>
             <thead>
-                <tr>
-                    <th>Guided tours</th>
-                    <th>Tickets</th>
+                <tr> <!--Help from Chat GTP to make table more accessible for screen readers-->
+                    <th scope="col">Event</th>
+                    <th scope="col">Tickets</th>
                 </tr>
             </thead>
             <tbody>
+                <tr class="section-heading">
+                    <td colspan="2">Guided tours</td>
+                </tr>
                 <tr>
                     <td>Kids</td>
                     <td>1</td>
@@ -61,14 +64,10 @@
                     <td>Price</td>
                     <td>$20</td>
                 </tr>
-            </tbody>
-            <thead>
-                <tr>
-                    <th>Night in the museum</th>
-                    <th>Tickets</th>
+
+                <tr class="section-heading">
+                    <td colspan="2">Night in the museum</td>
                 </tr>
-            </thead>
-            <tbody>
                 <tr>
                     <td>Kids</td>
                     <td>1</td>
@@ -81,15 +80,13 @@
                     <td>Price</td>
                     <td>$20</td>
                 </tr>
-            </tbody>
-            <thead>
-                <tr>
-                    <th>Price in total</th>
-                    <th>$40</th>
+                <tr class="section-heading total">
+                    <td>Total</td>
+                    <td>$40</td>
                 </tr>
-            </thead>
+            </tbody>
         </table>
-        <a href="exhibitions.html" class="cta-button">Go to exhibitions</a>
+        <a href="exhibitions.html" class="cta-button">Back to exhibitions</a>
     </main>
     <footer>
         <a href="about.html">About</a>
