--- a/tickets.html
+++ b/tickets.html
@@ -4,8 +4,8 @@
 <head>
     <title>Tickets</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Buy tickets for our events.">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Buy tickets for our events.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,7 +95,7 @@
             </table>
             <a href="cart.html" class="cta-button">Add to cart</a>
         </section>
-        <Section>
+        <section>
             <h2>Book special events</h2>
             <div class="flex">
                 <section class="card">
@@ -164,7 +164,7 @@
                         <img src="./assets/celso-405219.jpg" alt="The moon in different phases">
                     </div>
                     <h3>Professor of aeronautics</h3>
-                    <h4>Desember 13 2024</h4>
+                    <h4>December 13 2024</h4>
                     <table>
                         <thead>
                             <tr>
@@ -225,7 +225,7 @@
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                     </div>
                     <h3>Energetica Exhibition</h3>
-                    <h4>Desember 15 2024</h4>
+                    <h4>December 15 2024</h4>
                     <table>
                         <thead>
                             <tr>
