--- a/tickets.html
+++ b/tickets.html
@@ -98,7 +98,7 @@
         <section>
             <h2>Book special events</h2>
             <div class="flex">
-                <section class="card">
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/roberto-nickson-396152.jpg" alt="Mammut in the middle of a museum">
                     </div>
@@ -158,8 +158,8 @@
                         </tbody>
                     </table>
                     <a href="cart.html" class="cta-button">Add to cart</a>
-                </section>
-                <section class="card">
+                </article>
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/celso-405219.jpg" alt="The moon in different phases">
                     </div>
@@ -219,8 +219,8 @@
                         </tbody>
                     </table>
                     <a href="cart.html" class="cta-button">Add to cart</a>
-                </section>
-                <section class="card">
+                </article>
+                <article class="card">
                     <div class="card-image-container">
                         <img src="./assets/scientific-2040795_1280.jpg" alt="Scientist looking at a reactor">
                     </div>
@@ -280,7 +280,7 @@
                         </tbody>
                     </table>
                     <a href="cart.html" class="cta-button">Add to cart</a>
-                </section>
+                </article>
             </div>
         </Section>
     </main>
