--- a/tickets.html
+++ b/tickets.html
@@ -96,14 +96,14 @@
             <a href="cart.html" class="cta-button">Add to cart</a>
         </section>
         <section>
-            <h2>Book special events</h2>
+            <h2>Book Special Events</h2>
             <div class="flex">
                 <article class="card">
                     <div class="card-image-container">
-                        <img src="./assets/roberto-nickson-396152.jpg" alt="Mammut in the middle of a museum">
+                        <img src="./assets/roberto-nickson-396152.jpg" alt="Mammoth in the middle of a museum">
                     </div>
                     <h3>Night in the museum</h3>
-                    <h4>Desember 20 2024</h4>
+                    <h4>December 20 2024</h4>
                     <table>
                         <thead>
                             <tr>
