--- a/visit.html
+++ b/visit.html
@@ -4,8 +4,8 @@
 <head>
     <title>Visit</title>
     <meta charset="UTF-8">
-    <meta name="description" Content="Visit us. Amission is free for all.">
-    <meta name="viewport" Content="width=device-width, initial-scale=1">
+    <meta name="description" content="Visit us. Admission is free for all.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
         <h1>Visit</h1>
         <section class="museum-info">
             <div class="card museum">
-                <img src="./assets/scott-webb-102825.jpg" alt="Colorfull museum sign">
+                <img src="./assets/scott-webb-102825.jpg" alt="Colorful museum sign">
             </div>
             <div class="museum-info__text">
                 <section class="info">
@@ -65,7 +65,7 @@
 
 
         <section class="card large">
-            <h2>Guided tours</h2>
+            <h2>Guided Tours</h2>
             <div class="guided-tours">
                 <div class="card-image-container">
                     <img src="./assets/exhibition-1863344_1920.jpg" alt="Museum hall with exhibitions">
@@ -87,7 +87,7 @@
                     the visually impaired.</p>
             </section>
             <section class="info">
-                <h2>Food and drinks</h2>
+                <h2>Food and Drinks</h2>
                 <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks
                     and more.</p>
             </section>
