Added simple JS used in JS CA
Added JS to contact form.

--- a/contact-us.html
+++ b/contact-us.html
@@ -71,6 +71,14 @@
         <a href="get-involved.html">Get involved</a>
         <a href="visit.html">Visit</a>
     </footer>
+
+    <!--User feedback global-->
+    <dialog id="dialog">
+        <p id="dialog-message"></p>
+        <button id="close-dialog" class="cta-button">Close</button>
+    </dialog>
+
+    <script type="module" src="./js/contact-us.js"></script>
 </body>
 
 </html>
