--- a/check-out-success.html
+++ b/check-out-success.html
@@ -47,7 +47,7 @@
             <img src="./assets/open-science-735787-removebg-preview-2.png"
                 alt="Logo of earth with a keyhole and galaxies around.">
         </div>
-        <a href="order-summary.html" class="cta-button">Order summary</a>
+        <a href="order-summary.html" class="cta-button">View order summary</a>
     </main>
     <footer>
         <a href="about.html">About</a>
